[tool.poetry]
name = "autoashiato"
version = "0.1.0"
description = "Automatically draw lots for Ashiato Lottery Point of honto"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.11.2"
email = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
